--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
             android:name=".GeometricForms"
             android:label="@string/title_activity_geometric_forms"
+            android:theme="@style/AppTheme"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -26,10 +27,20 @@
         <activity
             android:name=".TriangleOperationsActivity"
             android:label="@string/title_activity_triangle_operations"
+            android:theme="@style/AppTheme"
             android:parentActivityName=".GeometricForms" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.GeometricForms" />
+        </activity>
+        <activity
+            android:name=".BaseAndHeight"
+            android:label="@string/title_activity_base_and_height"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".TriangleOperationsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
         </activity>
     </application>
 
