--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sample.kedroon.easymath" >
+    package="com.sample.kedroon.easymath">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,7 @@
             android:name=".GeometricForms"
             android:label="@string/title_activity_geometric_forms"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.MainActivity" />
@@ -28,7 +28,7 @@
             android:name=".TriangleOperationsActivity"
             android:label="@string/title_activity_triangle_operations"
             android:parentActivityName=".GeometricForms"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.GeometricForms" />
@@ -37,7 +37,8 @@
             android:name=".BaseAndHeight"
             android:label="@string/title_activity_base_and_height"
             android:parentActivityName=".TriangleOperationsActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
@@ -45,7 +46,25 @@
         <activity
             android:name=".ThreeSides"
             android:label="@string/title_activity_three_sides"
-            android:parentActivityName=".TriangleOperationsActivity" >
+            android:parentActivityName=".TriangleOperationsActivity"
+            android:windowSoftInputMode="stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
+        </activity>
+        <activity
+            android:name=".TwoSidesAndAngle"
+            android:label="@string/title_activity_two_sides_and_angle"
+            android:parentActivityName=".TriangleOperationsActivity"
+            android:windowSoftInputMode="stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
+        </activity>
+        <activity
+            android:name=".EquilateralTriangle"
+            android:label="@string/title_activity_equilateral_triangle"
+            android:parentActivityName=".TriangleOperationsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
