--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,6 +66,33 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sample.kedroon.easymath.TriangleOperationsActivity" />
+        </activity>
+        <activity
+            android:name=".SquareActivity"
+            android:label="@string/title_activity_square"
+            android:parentActivityName=".GeometricForms"
+            android:windowSoftInputMode="stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.GeometricForms" />
+        </activity>
+        <activity
+            android:name=".DiamondActivity"
+            android:label="@string/title_activity_diamond"
+            android:parentActivityName=".GeometricForms"
+            android:windowSoftInputMode="stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.GeometricForms" />
+        </activity>
+        <activity
+            android:name=".RectangleActivity"
+            android:label="@string/title_activity_rectangle"
+            android:parentActivityName=".GeometricForms"
+            android:windowSoftInputMode="stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sample.kedroon.easymath.GeometricForms" />
         </activity>
     </application>
 
